Fix: overflow for little screen

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -10,6 +10,10 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif; 
     overflow: hidden;
 
+    .hiddenOverflow {
+        overflow: hidden;
+    }
+
     foreignObject {
         overflow: auto;
     }
